init cwr logic, init branch admin logic, fix much